--- a/index.html
+++ b/index.html
@@ -1,97 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My First Dapp</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <div class="container mt-">
-      <div class="d-flex min-vh-100 justify-content-center align-items-center">
-        <section class="border rounded p-4 py-5 shadow">
-          <div>
-            <div class="card text-light bg-dark p-4" style="width: 400px">
-              <p class="m-0 p-0">You have:</p>
-              <div class="d-flex">
-                <h3 class="fw-bold mt-1" id="usdcBalance">0.00</h3>
-                <small class="fw-light mt-1 ms-1 py-2" id="contractName"
-                  >USDC</small
-                >
-              </div>
-              <div class="mt-3">
-                <small
-                  class="
-                    bg-light
-                    text-muted text-lowercase
-                    p-2
-                    px-3
-                    rounded-pill
-                  "
-                  id="userAddress"
-                  >0x..add-here</small
-                >
-              </div>
-            </div>
-            <p class="card-text mt-3 d-none">
-              visit <a href="mint-usdc.html">here</a> to mint usdc
-            </p>
-          </div>
-          <div class="mt-4">
-            <h5 class="fw-bold">Transfer Usdt</h5>
-            <div
-              class="alert alert-info mt-2"
-              id="transferResponse"
-              style="display: none"
-            >
-              Lorem ipsum dolor sit amet.
-            </div>
-            <form
-              class="mt-4"
-              id="transferForm"
-              onsubmit="event.preventDefault(); transferUsdc();"
-            >
-              <div class="form-group">
-                <label for="receiver">Receivers address</label>
-                <input
-                  type="text"
-                  id="receiver"
-                  class="form-control"
-                  required
-                />
-              </div>
-              <div class="form-group mt-3">
-                <label for="amount">Amount</label>
-                <input type="text" id="amount" class="form-control" required />
-              </div>
-              <div class="form-group mt-3">
-                <button class="btn btn-success w-100" type="submit">
-                  Continue
-                </button>
-              </div>
-            </form>
-          </div>
-        </section>
-      </div>
-    </div>
-  </body>
-  <script
-    src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
-    type="application/javascript"
-  ></script>
-  <script src="./script/app.js"></script>
-  <script src="./script/transfer-usdc.js"></script>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>My First Dapp</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="./style.css" />
+	</head>
+	<body>
+		<div class="container mt-">
+			<div class="d-flex min-vh-100 justify-content-center align-items-center">
+				<section class="border rounded p-4 py-5 shadow">
+					<div>
+						<div class="card text-light bg-dark p-4" style="width: 400px">
+							<p class="m-0 p-0">You have:</p>
+							<div class="d-flex">
+								<h3 class="fw-bold mt-1" id="usdcBalance">0.00</h3>
+								<small class="fw-light mt-1 ms-1 py-2" id="contractName"
+									>USDC</small
+								>
+							</div>
+							<div class="mt-3">
+								<small
+									class="bg-light text-muted text-lowercase p-2 px-3 rounded-pill"
+									id="userAddress"
+									>0x..add-here</small
+								>
+							</div>
+						</div>
+						<p class="card-text mt-3 d-none">
+							visit <a href="mint-usdc.html">here</a> to mint usdc
+						</p>
+					</div>
+					<div class="mt-4">
+						<h5 class="fw-bold">Transfer Usdt</h5>
+						<div
+							class="alert alert-info mt-2"
+							id="transferResponse"
+							style="display: none"
+						>
+							Lorem ipsum dolor sit amet.
+						</div>
+						<form
+							class="mt-4"
+							id="transferForm"
+							onsubmit="event.preventDefault(); transferUsdc();"
+						>
+							<div class="form-group">
+								<label for="receiver">Receivers address</label>
+								<input
+									type="text"
+									id="receiver"
+									class="form-control"
+									required
+								/>
+							</div>
+							<div class="form-group mt-3">
+								<label for="amount">The Amount</label>
+								<input type="text" id="amount" class="form-control" required />
+							</div>
+							<div class="form-group mt-3">
+								<button class="btn btn-success w-100" type="submit">
+									Continue
+								</button>
+							</div>
+						</form>
+					</div>
+				</section>
+			</div>
+		</div>
+	</body>
+	<script
+		src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+		type="application/javascript"
+	></script>
+	<script src="./script/app.js"></script>
+	<script src="./script/transfer-usdc.js"></script>
 </html>
